2007-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Bong!
